fixing up sass warnings, fixing card issue on mobile, heading padding

--- a/app/pattern-scss/_button.scss
+++ b/app/pattern-scss/_button.scss
@@ -2,7 +2,7 @@
   display: block;
 }
 
-.light-background-main & {
+.light-background-main {
   .btn-primary {
     color: $light-back-main-color;
   }
