--- a/app/pattern-scss/_search.scss
+++ b/app/pattern-scss/_search.scss
@@ -3,6 +3,22 @@
 // Search form
 // ----------------------
 
+// Search form
+.search-form {
+  @extend .form-inline;
+}
+.search-form label {
+  font-weight: normal;
+  @extend .form-group;
+}
+.search-form .search-field {
+  @extend .form-control;
+}
+.search-form .search-submit {
+  @extend .btn;
+  @extend .btn-default;
+}
+
 ul.search-autosuggest {
   padding: 10px 0 0 0;
   display: none;
