--- a/app/pattern-scss/wp/_media.scss
+++ b/app/pattern-scss/wp/_media.scss
@@ -40,3 +40,18 @@
     display: block;
   }
 }
+
+// Captions
+.wp-caption {
+  @extend .thumbnail;
+}
+.wp-caption-text {
+  padding: $thumbnail-caption-padding;
+}
+
+// Text meant only for screen readers
+.screen-reader-text {
+  @extend .sr-only;
+  @extend .sr-only-focusable;
+}
+
