--- a/app/pattern-scss/wp/_so-pagebuilder.scss
+++ b/app/pattern-scss/wp/_so-pagebuilder.scss
@@ -10,12 +10,20 @@
   }
 }
 
+[data-stretch-type=full] {
+  padding-left: 0!important;
+  padding-right: 0!important;
+}
+
 [data-stretch-type=full] .panel-grid-cell {
   padding-left: 0!important;
   padding-right: 0!important;
 }
 
-[data-stretch-type="full"] {
-  margin-left: 15px!important; 
-  margin-right: 15px!important;
+
+@media screen and (min-width: 781px) {
+  [data-stretch-type="full"] {
+    margin-left: 15px!important; 
+    margin-right: 15px!important;
+  }
 }
